[package]
name = "kintraj"
version = "0.1.0"
authors = ["Ian Kenney <ikenney@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
gnuplot = "0.0.34"
clap = { git = "https://github.com/clap-rs/clap/" }
